# Planner

./: .gitignore  Ascent Planner Sep, 16 2025.xlsx  DEPLOYMENT.md  Makefile  README.md  analyze_excel.py  debug_app.py  pyproject.toml  requirements.txt  simple_app.py  test_functionality.py
src/: __init__.py
src/app/: __init__.py  __main__.py  planner_app.py  sharepoint_connector.py  web.py
